<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_prev"
        android:icon="@drawable/ic_access_time_black_24dp"
        android:title="Last Match" />

    <item
        android:id="@+id/navigation_next"
        android:icon="@drawable/ic_flag_black_24dp"
        android:title="Next Match" />

    <item
        android:id="@+id/navigation_fav"
        android:icon="@drawable/ic_favorites"
        android:title="@string/title_fav" />

</menu>
