<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite_star"
        android:icon="@drawable/ic_star_border"
        android:title="@string/title_fav"
        app:showAsAction="always"/>

</menu>
